--- a/bun-library/package.json
+++ b/bun-library/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@changesets/cli": "^2.29.8",
+    "@intellectronica/ruler": "^0.3.34",
     "@types/bun": "latest",
     "pkg-pr-new": "^0.0.62",
     "publint": "^0.3.16",
@@ -44,6 +45,7 @@
     "lint": "biome check --error-on-warnings",
     "lint:fix": "biome check --error-on-warnings --write",
     "release": "changeset publish",
+    "ruler": "ruler apply",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "version": "changeset version && bun lint:fix"
